# backend-sozo

./: README.md
backend/: .env.example  ARCHITECTURE.md  DATABASE_SCHEMA.md  Dockerfile  GETTING_STARTED.md  PRS_ARCHITECTURE.md  README.md  SUPABASE_INTEGRATION.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  logging.py  security.py
backend/app/infrastructure/external_clients/: azure_storage.py
backend/app/infrastructure/messaging/: __init__.py
backend/app/infrastructure/storage/: __init__.py
backend/app/modules/ai/: llm_provider.py
backend/app/modules/assessments/: models.py
backend/app/modules/audit/: audit.py
backend/app/modules/centers/: models.py
backend/app/modules/documents/: models.py
backend/app/modules/patients/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/prs/: __init__.py  models.py  repository.py  risk_detector.py  router.py  scale_engine.py  schemas.py  seed_scales.py  service.py
backend/app/modules/prs_engine/: scoring.py
backend/app/modules/routing_engine/: routing.py
backend/app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/workflow/: state_machine.py
backend/app/shared/: types.py
backend/app/shared/exceptions/: __init__.py
backend/app/shared/models/: __init__.py  base.py  (+1 more)
backend/app/tests/: conftest.py  test_prs_engine.py
(+7 files in other folders)
